# smartdeploy-api

./: .gitignore  Cargo.toml  README.md  mercury-access-token
migrations/: 20240315095038_contracts_ttl.sql
queries/: query_deploy.graphql  query_publish.graphql  schema.graphql
queries/events/: query.graphql  schema.graphql
queries/ledger_expiration/: query.graphql  schema.graphql
queries/new_token/: mutation.graphql  schema.graphql
src/: deploy_events.rs  error.rs  main.rs  publish_events.rs  subscribe_ledger_expiration.rs  update_token.rs
src/events/: get_claim.rs  get_deploy.rs  get_publish.rs
src/expiration/: extend_ttl.rs  query_ledger_expiration.rs  read_ledger.rs  subscribe_ledger_expiration.rs
src/postgres/: db_communication.rs
