[package]
name = "smartdeploy-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
graphql_client = "0.13.0"
reqwest = { version = "0.11.22", features = ["json"]}
serde = "1.0.193"
shuttle-axum = "0.34.0"
shuttle-runtime = "0.34.0"
shuttle-secrets = "0.34.1"
tokio = "1.28.2"
tracing = "0.1.40"
