[package]
name = "smartdeploy-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.4", features = ["macros"]}
graphql_client = "0.13.0"
reqwest = { version = "0.11.24", features = ["json", "blocking"]}
serde = "1.0.192"
shuttle-axum = "0.41.0"
shuttle-runtime = "0.41.0"
shuttle-secrets = "0.41.0"
tokio = "1.28.2"
tracing = "0.1.40"
stellar-xdr = { version = "20.0.0", features = ["curr", "std", "serde", "base64"] }
sha2 = "0.10.8"
serde_json = "1.0.108"
stellar-strkey = "0.0.8"
soroban-cli = "20.3.0"
thiserror = "1.0.55"
tower-http = { version = "0.5.1", features = [ "cors" ] }
http = "1.0.0"
sqlx = { version = "0.7.4", features = ["macros"] }
shuttle-shared-db = { version = "0.41.0", features = ["postgres", "sqlx"] }
